--- a/rooms/roomballot/templates/roomballot/create-review-success.html
+++ b/rooms/roomballot/templates/roomballot/create-review-success.html
@@ -21,7 +21,7 @@
             <p>
                 Thank you for reviewing your room. Your review has been recorded and will be shown presently.
             </p>
-            <a href="/roomballot/dashboard" class="btn btn-primary mt-3">Back to Dashboard</a>
+            <a href="/roomballot/dashboard" class="btn btn-primary mt-3"><i class="fas fa-angle-left"></i> Back to Dashboard</a>
 
         </div>
 
