--- a/rooms/roomballot/templates/roomballot/create-review.html
+++ b/rooms/roomballot/templates/roomballot/create-review.html
@@ -92,7 +92,7 @@
                     <textarea class="form-control" rows="5" id="text" name="text" required></textarea>
                 </div>
 
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">Submit <i class="fas fa-angle-right ml-2"></i></button>
             </form>
 
         </div>
