--- a/rooms/roomballot/templates/roomballot/room-detail-view.html
+++ b/rooms/roomballot/templates/roomballot/room-detail-view.html
@@ -103,9 +103,9 @@
                     <td>£{{ room.price }}</td>
                 </tr>
                 <tr>
-                    <td><b>Proposed New Price</b></td>
+                    <!--<td><b>Proposed New Price</b></td>
                     <td>£{{ room.new_price|stringformat:'0.2f' }}<div class="mt-2"></div>
-                        <a href="/roomballot/room-pricing/{{ room.room_id }}" class="btn btn-primary">Why?</a></td>
+                        <a href="/roomballot/room-pricing/{{ room.room_id }}" class="btn btn-primary">Why?</a></td>-->
                 </tr>
                 <tr>
                     <td><b>Contract Length</b></td>
