--- a/rooms/roomballot/templates/roomballot/student-detail.html
+++ b/rooms/roomballot/templates/roomballot/student-detail.html
@@ -44,7 +44,7 @@
                     <td>
                         {% if student_to_view.syndicate %}
                             #{{ student_to_view.syndicate.syndicate_id }}<br>
-                            <a href="/roomballot/syndicate/{{ student_to_view.syndicate.syndicate_id }}" class="btn btn-primary mt-2">View</a>
+                            <a href="/roomballot/syndicate/{{ student_to_view.syndicate.syndicate_id }}" class="btn btn-primary mt-2">View <i class="fas fa-angle-right ml-2"></i></a>
                         {% else %} None
                         {% endif %}
                     </td>
@@ -68,7 +68,7 @@
                     <td><b>Room Allocated</b></td>
                     <td>
                         {{ room }}<br>
-                        {% if room %}<a href="/roomballot/room/{{ room.room_id }}" class="btn btn-primary mt-2">View</a>{% endif %}
+                        {% if room %}<a href="/roomballot/room/{{ room.room_id }}" class="btn btn-primary mt-2">View <i class="fas fa-angle-right ml-2"></i></a>{% endif %}
                     </td>
                 </tr>
 
