Added pricing explanation

--- a/rooms/roomballot/templates/roomballot/info-select-room.html
+++ b/rooms/roomballot/templates/roomballot/info-select-room.html
@@ -17,6 +17,7 @@
                 <a href="/roomballot/info/create-syndicate" class="list-group-item"><span>Creating a Syndicate</span></a>
                 <a href="/roomballot/info/individual" class="list-group-item"><span>Ballot as an Individual</span></a>
                 <a href="/roomballot/info/select-room" class="list-group-item active"><span>Selecting a Room</span></a>
+                <a href="/roomballot/info/pricing" class="list-group-item"><span>Pricing</span></a>
                 <a href="/roomballot/about" class="list-group-item"><span>About</span></a>
             </div>
         </div>
