--- a/rooms/roomballot/templates/roomballot/room-detail-view.html
+++ b/rooms/roomballot/templates/roomballot/room-detail-view.html
@@ -94,13 +94,15 @@
                     <td><b>Size</b></td>
                     <td>{{ room.size }} m&#178;</td>
                 </tr>
-                <tr>
+                <!--<tr>
                     <td><b>Band</b></td>
                     <td>{{ room.band }}</td>
-                </tr>
+                </tr>-->
                 <tr>
                     <td><b>Weekly Price</b></td>
-                    <td>£{{ room.price }}</td>
+                    <!--<td>£{{ room.price }}</td>-->
+                    <td>To Be Confirmed<br>
+                        <a href="/roomballot/info/pricing" class="btn btn-primary mt-2">Why?</a></td>
                 </tr>
                 <tr>
                     <!--<td><b>Proposed New Price</b></td>
