Minor layout changes

--- a/rooms/roomballot/templates/roomballot/base-student.html
+++ b/rooms/roomballot/templates/roomballot/base-student.html
@@ -58,12 +58,16 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark justify-content-between mb-4">
+<nav class="navbar navbar-expand-lg navbar-dark mb-4">
 
-    <a class="navbar-brand" href="/roomballot/welcome">
+    <a class="navbar-brand d-none d-md-block" href="/roomballot/welcome">
         <img src="https://www.jcr.dow.cam.ac.uk/storage/app/media/dowjcrwhite.png" width="60"
              style="padding-right: 10px">
         Room Balloting System
+    </a>
+    <a class="navbar-brand d-md-none" href="/roomballot/welcome">
+        <img src="https://www.jcr.dow.cam.ac.uk/storage/app/media/dowjcrwhite.png" width="60"
+             style="padding-right: 10px">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
