--- a/rooms/roomballot/templates/roomballot/staircase-view.html
+++ b/rooms/roomballot/templates/roomballot/staircase-view.html
@@ -58,7 +58,7 @@
             <div class="d-md-block">
             <div class="list-group">
                 {% if floorplan is not None %}
-                <a href="/media/{{ floorplan.file.url }}" class="list-group-item"><i class="fa fa-key"></i> <span>Floorplan</span></a>
+                <a href="/media/{{ floorplan.file.url }}" class="list-group-item"><span>Floorplan</span></a>
                 {% endif %}
                 <p class="list-group-item">
                     Let: {{ staircase.contract_length }} Weeks
