--- a/rooms/roomballot/templates/roomballot/info-pricing.html
+++ b/rooms/roomballot/templates/roomballot/info-pricing.html
@@ -208,7 +208,7 @@
                                 <div class="card-header" id="headingSix">
                                     <h5 class="mb-0">
                                         <button class="btn btn-link" data-toggle="collapse" data-target="#collapseSix">
-                                            How is the bathroom sharing weighting calculated?
+                                            What about bathroom sharing weighting?
                                         </button>
                                     </h5>
                                 </div>
@@ -243,7 +243,7 @@
                                 <div class="card-header" id="headingSeven">
                                     <h5 class="mb-0">
                                         <button class="btn btn-link" data-toggle="collapse" data-target="#collapseSeven">
-                                            How is the renovation weighting calculated?
+                                            What about renovation weighting?
                                         </button>
                                     </h5>
                                 </div>
