--- a/rooms/roomballot/templates/roomballot/info.html
+++ b/rooms/roomballot/templates/roomballot/info.html
@@ -123,7 +123,7 @@
                                     the Balloting
                                     System to form your syndicates. Only freshers need to form syndicates, and you will
                                     have until
-                                    {{ date }} to complete this.
+                                    {{ syndicate_date }} to complete this.
                                 </div>
                             </div>
                         </div>
@@ -150,7 +150,7 @@
                                 <h5 class="mb-0">
                                     <button class="btn btn-link collapsed" data-toggle="collapse"
                                             data-target="#collapseSix">
-                                        Long Contract vs Short Contract
+                                        Long or short contract?
                                     </button>
                                 </h5>
                             </div>
