--- a/rooms/roomballot/templates/roomballot/info.html
+++ b/rooms/roomballot/templates/roomballot/info.html
@@ -13,7 +13,7 @@
         <div class="col-md-3 col-sm-12 mb-4 d-md-block sidebar">
             <div class="list-group">
                 <a href="/roomballot/info" class="list-group-item active"><span>Ballot Information</span></a>
-                <a href="#" class="list-group-item"><span>Bursaries & Rent Reduction</span></a>
+                <a href="/roomballot/info/bursary" class="list-group-item"><span>Bursaries & Rent Reduction</span></a>
                 <a href="/roomballot/info/create-syndicate" class="list-group-item"><span>Creating a Syndicate</span></a>
                 <a href="/roomballot/info/individual" class="list-group-item"><span>Ballot as an Individual</span></a>
                 <a href="/roomballot/info/select-room" class="list-group-item"><span>Selecting a Room</span></a>
