--- a/rooms/roomballot/templates/roomballot/room-detail-view.html
+++ b/rooms/roomballot/templates/roomballot/room-detail-view.html
@@ -45,6 +45,8 @@
             {% endfor %}
         </div>
         <div class="col-md-6">
+            <p class="mt-4">Please be aware that the room catalogue may change in advance of ballot weekend. Rooms listed
+            here may be taken out of the ballot at any time, and more rooms may be added in due course.</p>
             <table class="table table-bordered table-striped table-hover mt-4">
                 <thead style="display:none">
                 <tr>
