Changes to allow non-balloters to view bands

--- a/rooms/roomballot/templates/roomballot/room-detail-pricing.html
+++ b/rooms/roomballot/templates/roomballot/room-detail-pricing.html
@@ -123,7 +123,8 @@
                 </tr>
                 <tr>
                     <td><b>Feature Price</b></td>
-                    <td>{{ room.score_total|stringformat:'0.2f' }} x {{ y }}</td>
+                    <td>{{ room.score_total|stringformat:'0.2f' }} x {{ y }}<br>
+                        <a href="/roomballot/info/pricing" class="btn btn-primary mt-2">Why? <i class="fas fa-angle-right ml-2"></i></a></td></td></td>
                     <td>£{{ room.feature_price|stringformat:'0.2f' }}</td>
                 </tr>
                 <tr>
