--- a/rooms/roomballot/templates/roomballot/room-detail-view.html
+++ b/rooms/roomballot/templates/roomballot/room-detail-view.html
@@ -47,6 +47,7 @@
         <div class="col-md-6">
             <p class="mt-4">Please be aware that the room catalogue may change in advance of ballot weekend. Rooms listed
             here may be taken out of the ballot at any time, and more rooms may be added in due course.</p>
+            <a href="mailto:cjo41@cam.ac.uk" class="btn btn-primary mt-2">Report Dodgy Data!</a></td></td></td>
             <table class="table table-bordered table-striped table-hover mt-4">
                 <thead style="display:none">
                 <tr>
