Removed ability to see people outside ballot

--- a/rooms/roomballot/templates/roomballot/room-detail-view.html
+++ b/rooms/roomballot/templates/roomballot/room-detail-view.html
@@ -14,10 +14,12 @@
         <div class="row">
             <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
                 <h2>{{ room }}</h2>
-                {% if room.taken_by is not None %}
-                    <p>This room has been taken by <a style="color: #990066;" href="/roomballot/student/{{ room.taken_by.user_id }}"><b>{{ room.taken_by }}</b></a>.</p>
-                {% elif room.type == 2 %}
-                    <p>This room is currently available for occupation.</p>
+                {% if room.type == 2 %}
+                    {% if room.taken_by is not None %}
+                        <p>This room has been taken by <a style="color: #990066;" href="/roomballot/student/{{ room.taken_by.user_id }}"><b>{{ room.taken_by }}</b></a>.</p>
+                    {% else %}
+                        <p>This room is currently available for occupation.</p>
+                    {% endif %}
                 {% else %}
                     <p>This room is reserved for students who are outside the JCR ballot.</p>
                 {% endif %}
