--- a/rooms/roomballot/templates/roomballot/staircase-view.html
+++ b/rooms/roomballot/templates/roomballot/staircase-view.html
@@ -30,11 +30,11 @@
             <table class="table table-bordered table-hover">
                 <thead>
                 <tr>
-                    <th scope="col">Room Number</th>
+                    <th scope="col">Room</th>
                     <th scope="col" class="d-none d-sm-table-cell">Size</th>
                     <th scope="col" class="d-none d-sm-table-cell">Ensuite</th>
                     <th scope="col" class="d-none d-sm-table-cell">Bed Type</th>
-                    <th scope="col" class="d-none d-sm-table-cell">Rent Band</th>
+                    <th scope="col">Band</th>
                     <th scope="col">Occupant</th>
                 </tr>
                 </thead>
@@ -49,7 +49,7 @@
                     <td class="d-none d-sm-table-cell">{{ room.size }} m&#178;</td>
                     <td class="d-none d-sm-table-cell">{% if room.is_ensuite %}Yes{% else %}No{% endif %}</td>
                     <td class="d-none d-sm-table-cell">{% if room.is_double_bed %}Double{% else %}Single{% endif %}</td>
-                    <td class="d-none d-sm-table-cell">{{ room.new_band }}</td>
+                    <td>{{ room.new_band }}</td>
                     <td>{% if room.type == 2 %}{{ room.taken_by }}{% else %}Outside Ballot{% endif %}</td>
                 </tr>
                 {% endfor %}
