Added message explaining banding heuristics

--- a/rooms/roomballot/templates/roomballot/room-detail-pricing.html
+++ b/rooms/roomballot/templates/roomballot/room-detail-pricing.html
@@ -161,6 +161,10 @@
                     <td><b>Proposed New Band</b></td>
                     <td>{{ room.new_band }}</td>
                 </tr>
+                <tr>
+                    <td><b>Heuristics Applied</b></td>
+                    <td>{{ room.pricing_notes }}</td>
+                </tr>
                 </tbody>
             </table>
         </div>
