Minor alterations to pricing

--- a/rooms/roomballot/templates/roomballot/room-detail-pricing.html
+++ b/rooms/roomballot/templates/roomballot/room-detail-pricing.html
@@ -163,7 +163,7 @@
                 </tr>
                 <tr>
                     <td><b>Heuristics Applied</b></td>
-                    <td>{{ room.pricing_notes }}</td>
+                    <td>{{ room.pricing_notes|linebreaks }}</td>
                 </tr>
                 </tbody>
             </table>
